--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
             $('#start_epoch').datepicker(opts);
             $('#end_epoch').datepicker(opts);
 
+            $('#dataHex').click(function() {
+               copyToClipboard($(this).attr('id'));
+            });
+
+            $('#prepareProposal').click(function() {
+                copyToClipboard($(this).attr('id'));
+            });
+
+            $('#submitProposal').click(function() {
+                copyToClipboard($(this).attr('id'));
+            });
+
             $('#formSubmit').click(function() {
 
                 var gov = new Bitcore.GovObject.Proposal();
@@ -60,6 +72,12 @@
             });
         });
 
+        function copyToClipboard(id)
+        {
+            document.getElementById(id).select();
+            document.execCommand('copy');
+        }
+
     </script>
 
     <style type="text/css">
@@ -71,99 +89,120 @@
 
 <div class="col-xs-10 col-xs-offset-1">
 
-<div class="row" style="margin-top:4em;">
-    <div class="col-xs-8 col-xs-offset-2">
-
-        <form>
-            <div class="form-group">
-                <label for="dataHex">data-hex:</label>
-                <textarea class="form-control" id="dataHex" rows="4" placeholder=""></textarea>
-            </div>
-        </form>
-
-    </div>
-</div>
-
-<div class="row" style="margin-top:2em;">
-    <div class="col-xs-4 col-xs-offset-2">
-
-        <form>
-            <div class="form-group">
-                <label for="end_epoch">end_epoch:</label>
-                <input type="text" class="form-control" id="end_epoch" value="" placeholder="">
-            </div>
-            <div class="form-group">
-                <label for="payment_address">payment_address:</label>
-                <input type="text" class="form-control" id="payment_address" value="yTC62huR4YQEPn9AJHjnQxxreHSbgAoatV" placeholder="yTC62huR4YQEPn9AJHjnQxxreHSbgAoatV">
-            </div>
-            <div class="form-group">
-                <label for="payment_amount">payment_amount:</label>
-                <input type="text" class="form-control" id="payment_amount" value="39.23" placeholder="39.23">
-            </div>
-            <div class="form-group">
-                <label for="name">name:</label>
-                <input type="text" class="form-control" id="name" value="我想喝一點點無龍茶" placeholder="我想喝一點點無龍茶">
-            </div>
-            <div class="form-group">
-                <label for="start_epoch">start_epoch:</label>
-                <input type="text" class="form-control" id="start_epoch" value="" placeholder="">
-            </div>
-            <div class="form-group">
-                <label for="type">type:</label>
-                <input type="text" class="form-control" id="type" value="1" placeholder="1">
-            </div>
-            <div class="form-group">
-                <label for="url">url:</label>
-                <input type="text" class="form-control" id="url" value="blah.com" placeholder="blah.com">
-            </div>
-
-            <div class="form-group hidden">
-                <label for="apiEndpoint">apiEndpoint:</label>
-                <input type="text" class="form-control" id="apiEndpoint" value="https://dev-test.dash.org:3001/insight-api-dash" placeholder="https://dev-test.dash.org:3001/insight-api-dash">
-            </div>
-
-            <div type="submit" class="btn btn-primary" id="formSubmit">Submit</div>
-        </form>
-
+    <div class="row" style="margin-top:2em;">
+        <div class="col-xs-12"><h1>Budget Proposal</h1></div>
     </div>
 
-    <div class="col-xs-4">
+    <div class="row" style="margin-top:1em;">
+        <div class="col-xs-6">
 
-        <form>
+            <form>
 
-            <div class="form-group">
-                <label for="parentHash">parent-hash:</label>
-                <input type="text" class="form-control" id="parentHash" value="0" placeholder="0">
-            </div>
+                <div class="form-group">
+                    <label for="name">name:</label>
+                    <input type="text" class="form-control" id="name" value="我想喝一點點無龍茶" placeholder="我想喝一點點無龍茶">
+                </div>
 
-            <div class="form-group">
-                <label for="revision">revision:</label>
-                <input type="text" class="form-control" id="revision" value="1" placeholder="1">
-            </div>
+                <div class="form-group">
+                    <label for="url">url:</label>
+                    <input type="text" class="form-control" id="url" value="blah.com" placeholder="blah.com">
+                </div>
 
-            <div class="form-group">
-                <label for="time">time:</label>
-                <input type="text" class="form-control" id="time" value="1474049452" placeholder="1474049452">
-            </div>
+                <div class="form-group">
+                    <label for="payment_address">payment_address:</label>
+                    <input type="text" class="form-control" id="payment_address" value="yTC62huR4YQEPn9AJHjnQxxreHSbgAoatV" placeholder="yTC62huR4YQEPn9AJHjnQxxreHSbgAoatV">
+                </div>
 
-            <div class="form-group">
-                <label for="feeTxid">fee-txid:</label>
-                <input type="text" class="form-control" id="feeTxid" value="" placeholder="<fee-txid>">
-            </div>
+                <div class="form-group">
+                    <label for="payment_amount">payment_amount:</label>
+                    <input type="text" class="form-control" id="payment_amount" value="39.23" placeholder="39.23">
+                </div>
 
-            <div class="form-group">
-                <label for="prepareProposal">prepare proposal:</label>
-                <textarea class="form-control" id="prepareProposal" rows="3" placeholder=""></textarea>
-            </div>
+                <div class="form-group">
+                    <label for="start_epoch">start date:</label>
+                    <input type="text" class="form-control" id="start_epoch" value="" placeholder="">
+                </div>
 
-            <div class="form-group">
-                <label for="submitProposal">submit proposal:</label>
-                <textarea class="form-control" id="submitProposal" rows="3" placeholder=""></textarea>
-            </div>
-        </form>
+                <div class="form-group">
+                    <label for="end_epoch">end date:</label>
+                    <input type="text" class="form-control" id="end_epoch" value="" placeholder="">
+                </div>
+
+                <div class="form-group" style="display:none;">
+                    <label for="type">type:</label>
+                    <input type="text" class="form-control" id="type" value="1" placeholder="1">
+                </div>
+
+                <div type="submit" class="btn btn-primary" id="formSubmit">Create Proposal</div>
+
+            </form>
+
+        </div>
+
+        <div class="col-xs-6">
+
+            <form>
+
+                <div class="form-group">
+                    <label for="parentHash">parent-hash:</label>
+                    <input type="text" class="form-control" id="parentHash" value="0" placeholder="0">
+                </div>
+
+                <div class="form-group">
+                    <label for="revision">revision:</label>
+                    <input type="text" class="form-control" id="revision" value="1" placeholder="1">
+                </div>
+
+                <div class="form-group">
+                    <label for="time">time:</label>
+                    <input type="text" class="form-control" id="time" value="1474049452" placeholder="1474049452">
+                </div>
+
+                <div class="form-group">
+                    <label for="feeTxid">fee-txid:</label>
+                    <input type="text" class="form-control" id="feeTxid" value="" placeholder="<fee-txid>">
+                </div>
+
+            </form>
+
+        </div>
 
     </div>
-</div>
+
+    <div class="row" style="margin-top:2em;">
+
+        <div class="col-xs-6">
+
+            <form>
+
+                <div class="form-group">
+                    <label for="dataHex">data-hex:</label>
+                    <textarea class="form-control" id="dataHex" rows="6" placeholder=""></textarea>
+                </div>
+
+            </form>
+
+        </div>
+
+        <div class="col-xs-6">
+
+            <form>
+
+                <div class="form-group">
+                    <label for="prepareProposal">prepare proposal:</label>
+                    <textarea class="form-control" id="prepareProposal" rows="4" placeholder=""></textarea>
+                </div>
+
+                <div class="form-group">
+                    <label for="submitProposal">submit proposal:</label>
+                    <textarea class="form-control" id="submitProposal" rows="4" placeholder=""></textarea>
+                </div>
+
+            </form>
+
+        </div>
+
+    </div>
 
 </div>
 
