--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
         $(document).ready(function() {
 
+            $("#time").val(Math.floor((new Date).getTime() / 1000));
+
             var opts = { dateFormat: $.datepicker.ISO_8601 };
 
             $('#start_epoch').datepicker(opts, 'getdate');
@@ -48,7 +50,7 @@
                     $('#feeTxid').on('input', function() {
                         if ($(this).val().length > 0) {
                             var submitCommand = "gobject submit " + $('#parentHash').val() + " " + $('#revision').val() + " " + $('#time').val() + " " + proposal.gov.serialize() + " " + $(this).val();
-
+                            console.log(submitCommand);
                             $('textarea#submitProposal').val(submitCommand);
                             $('.walletCommands#walletCommandsSubmit').removeClass('hidden');
                         } else {
@@ -145,8 +147,9 @@
         ProposalGenerator.prototype.walletCommands = function() {
             var gov = this.gov;
 
-            var propCommand = "gobject prepare "+$('#parentHash').val() + " " + $('#revision').val() +"  " + $('#time').val() +" " + gov.serialize();
-            $("textarea#prepareProposal").val(propCommand);
+            var prepCommand = "gobject prepare "+$('#parentHash').val() + " " + $('#revision').val() +" " + $('#time').val() +" " + gov.serialize();
+            console.log(prepCommand);
+            $("textarea#prepareProposal").val(prepCommand);
 
             if(this._mode == 'proposal') {
                 setFormEditable(true);
