included dropdown lists to be uneditable/editable with the "Create Proposal"/"Edit Proposal"-buttons

--- a/index.html
+++ b/index.html
@@ -300,6 +300,9 @@
             $('.createProposal input').each(function() {
                 $(this).attr("disabled", edit);
             });
+            $('.createProposal select').each(function() {
+                $(this).attr("disabled", edit);
+            });
 
             if (edit === true) {
                 $('#btnPrepare').addClass('hidden');
